--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "functions": {
-    "api/mcp.ts": { "runtime": "nodejs20.x", "memory": 512, "maxDuration": 10 },
-    "api/chat.ts": { "runtime": "nodejs20.x", "memory": 512, "maxDuration": 10 }
+    "api/**/*.ts": {
+      "runtime": "nodejs20.x",
+      "memory": 512,
+      "maxDuration": 10
+    }
   }
 }
