--- a/package.json
+++ b/package.json
@@ -1,15 +1,8 @@
 {
   "name": "amello-mcp",
-  "private": true,
+  "version": "1.0.0",
   "type": "module",
-  "license": "MIT",
-  "scripts": {
-    "build": "echo Build not required for Vercel functions",
-    "start": "vercel dev"
-  },
-  "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.18.1",
-    "zod": "^3.23.8",
-    "openai": "^4.57.0"
-  }
+  "private": true,
+  "dependencies": {},
+  "devDependencies": {}
 }
