--- a/package.json
+++ b/package.json
@@ -2,7 +2,5 @@
   "name": "amello-mcp",
   "version": "1.0.0",
   "type": "module",
-  "private": true,
-  "dependencies": {},
-  "devDependencies": {}
+  "private": true
 }
