--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "amello-mcp",
   "version": "1.0.0",
+  "private": true,
   "type": "module",
-  "private": true
+  "scripts": {
+    "build": "tsc"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.3"
+  }
 }
