--- a/package.json
+++ b/package.json
@@ -1,15 +1,8 @@
 {
   "name": "amello-mcp",
   "private": true,
-  "type": "commonjs",
-  "engines": {
-    "node": ">=18"
-  },
+  "engines": { "node": ">=18.17" },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.6.0",
-    "zod": "^3.23.8"
-  },
-  "scripts": {
-    "vercel-build": "echo \"No build step\""
+    "@modelcontextprotocol/sdk": "^0.6.0"
   }
 }
