--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "amello-mcp",
   "private": true,
-  "engines": { "node": ">=18.17" },
+  "type": "commonjs",
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.6.0"
+     "@modelcontextprotocol/sdk": "^0.1.0"
+}    "zod": "^3.23.8"
+  },
+  "scripts": {
+    "vercel-build": "echo \"No build step\""
   }
 }
