--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "amello-mcp",
+  "version": "0.1.0",
   "private": true,
   "type": "commonjs",
-  "engines": {
-    "node": ">=18"
-  },
+  "engines": { "node": ">=18.17" },
   "dependencies": {
-     "@modelcontextprotocol/sdk": "^0.1.0"
-}    "zod": "^3.23.8"
+    "@modelcontextprotocol/sdk": "^0.6.0"
   },
   "scripts": {
-    "vercel-build": "echo \"No build step\""
+    "build": "echo \"no build step\"",
+    "start": "node api/mcp.js"
   }
 }
